--- a/data-structures.bib
+++ b/data-structures.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2016-12-04 07:54:36 -0600 
+%% Created for Jeff Erickson at 2019-11-05 16:58:14 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{fw-sitbf-93,
+	Author = {Fredman, Michael L. and Willard, Dan E.},
+	Date-Added = {2019-11-05 16:57:31 -0600},
+	Date-Modified = {2019-11-05 16:58:11 -0600},
+	Doi = {10.1016/0022-0000(93)90040-4},
+	Journal = {J. Comput. Syst. Sci.},
+	Number = {3},
+	Pages = {424--436},
+	Title = {Surpassing the information theoretic bound with fusion trees},
+	Volume = {48},
+	Year = {1993}}
 
 @inproceedings{bdlrr-drmqf-12,
 	Author = {Brodal, Gerth Stølting and Davoodi, Pooya and Lewenstein, Moshe and Raman, Rajeev and Rao, Satti Srinivasa},
@@ -21,7 +33,8 @@
 	Series = {Lecture Notes Comput. Sci.},
 	Title = {Two Dimensional Range Minimum Queries and {Fibonacci} Lattices},
 	Volume = {7501},
-	Year = {2012}}
+	Year = {2012},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-642-33090-2_20}}
 
 @article{kt-tb2is-98,
 	Author = {Koutsoupias, Elias and Taylor, David Scot},
