--- a/optimization.bib
+++ b/optimization.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2019-08-21 10:34:21 -0500 
+%% Created for Jeff Erickson at 2019-09-13 15:53:29 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{bgh-ruip-87,
+	Author = {Byrd, R. H. and Goldman, A. J. and Heller, Miriam},
+	Date-Added = {2019-09-13 15:52:24 -0500},
+	Date-Modified = {2019-09-13 15:53:29 -0500},
+	Doi = {10.1287/opre.35.1.140},
+	Journal = {Oper. Res.},
+	Number = {1},
+	Pages = {140--142},
+	Title = {Recognizing Unbounded Integer Programs},
+	Volume = {35},
+	Year = {2987}}
 
 @misc{ks-mfupg-19,
 	Arxiv = {1907.02274},
@@ -1534,14 +1546,16 @@
 	Author = {Cornelson, Sabine and Karrenbauer, Andreas},
 	Comments = {planar min-cost flow with bounded integer costs and bounded face degrees in O(n^{3/2}) time},
 	Date-Added = {2013-06-11 05:02:44 +0000},
-	Date-Modified = {2013-07-22 16:18:50 +0000},
+	Date-Modified = {2019-08-25 15:12:23 -0500},
+	Doi = {10.7155/jgaa.00265},
 	Journal = {J. Graph Algorithms Appl.},
 	Number = {3},
 	Pages = {635--650},
 	Read = {1},
 	Title = {Accelerated bend minimization},
 	Volume = {16},
-	Year = {2012}}
+	Year = {2012},
+	Bdsk-Url-1 = {https://doi.org/10.7155/jgaa.00265}}
 
 @inproceedings{ck-abm-11,
 	Author = {Cornelson, Sabine and Karrenbauer, Andreas},
