--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,169 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2019-08-20 10:16:18 -0500 
+%% Created for Jeff Erickson at 2019-11-26 13:38:36 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{m-atrpf-67,
+	Author = {Maxwell, James Clerk},
+	Date-Added = {2019-11-26 13:35:32 -0600},
+	Date-Modified = {2019-11-26 13:38:33 -0600},
+	Journal = {Engineer},
+	Keywords = {Maxwell-Cremona theorem, Rankine reciprocal diagram},
+	Pages = {402},
+	Title = {On the application of the theory of reciprocal polar figures to the construction of diagrams of forces},
+	Volume = {24},
+	Year = {1867}}
+
+@article{w-wspsp-91,
+	Author = {Whiteley, Walter},
+	Date-Added = {2019-09-05 14:05:34 -0500},
+	Date-Modified = {2019-09-05 14:06:37 -0500},
+	Doi = {10.1016/0166-218X(91)90004-G},
+	Journal = {Discrete Appl. Math.},
+	Number = {3},
+	Pages = {275--294},
+	Title = {Weavings, sections, and projections of spherical polyhedra},
+	Volume = {32},
+	Year = {1991},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0166-218X(91)90004-G}}
+
+@article{w-rp2wl-89,
+	Author = {Whiteley, Walter},
+	Date-Added = {2019-09-05 14:00:47 -0500},
+	Date-Modified = {2019-09-05 14:01:51 -0500},
+	Doi = {10.1007/BF00181341},
+	Journal = {Geom. Dedicata},
+	Number = {3},
+	Pages = {255--279},
+	Title = {Rigidity and polarity {II}: {Weaving} lines and tensegrity frameworks},
+	Volume = {39},
+	Year = {1989},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF00181341}}
+
+@article{k-gmdpc-75,
+	Author = {Kempe, Alfred B.},
+	Date-Added = {2019-09-05 13:42:15 -0500},
+	Date-Modified = {2019-09-05 13:45:45 -0500},
+	Doi = {10.1112/plms/s1-7.1.213},
+	Journal = {Proc. London Math. Soc.},
+	Keywords = {universality},
+	Number = {1},
+	Pages = {213--216},
+	Read = {1},
+	Title = {On a General Method of describing Plane Curves of the $n^{\text{th}}$ degree by Linkwork},
+	Volume = {s1--7},
+	Year = {1875},
+	Bdsk-Url-1 = {https://doi.org/10.1112/plms/s1-7.1.213}}
+
+@article{cp-cicsl-94,
+	Author = {Crapo, Henry and Penne, Ridu},
+	Date-Added = {2019-09-04 11:40:24 -0500},
+	Date-Modified = {2019-09-04 17:24:41 -0500},
+	Doi = {10.1006/aima.1994.1001},
+	Journal = {Adv. Math.},
+	Number = {1},
+	Pages = {1--106},
+	Title = {Chirality and the Isotopy Classification of Skew Lines in Projective 3-Space},
+	Volume = {103},
+	Year = {1994},
+	Bdsk-Url-1 = {https://doi.org/10.1006/aima.1994.1001}}
+
+@article{bc-cccnc2-06,
+	Abstract = {We define counting classes  #PR and #PC in the Blum–Shub–Smale setting of computations over the real or complex numbers, respectively. The problems of counting the number of solutions of systems of polynomial inequalities over R, or of systems of polynomial equalities overC, respectively, turn out to be natural complete problems in these classes. We investigate to what extent the new counting classes capture the complexity of computing basic topological invariants of semialgebraic sets (over R) and algebraic sets (over C). We prove that the problem of computing the Euler–Yao characteristic of semialgebraic sets is FPR#PR-complete, and that the problem of computing the geometric degree of complex algebraic sets is FPC#PC-complete. We also define new counting complexity classes in the classical Turing model via taking Boolean parts of the classes above, and show that the problems to compute the Euler characteristic and the geometric degree of (semi)algebraic sets given by integer polynomials are complete in these classes. We complement the results in the Turing model by proving, for all k∈N, the FPSPACE-hardness of the problem of computing the kth Betti number of the set of real zeros of a given integer polynomial. This holds with respect to the singular homology as well as for the Borel–Moore homology.},
+	Author = {Bürgisser, Peter and Cucker, Felipe},
+	Date-Added = {2019-08-25 15:51:29 -0500},
+	Date-Modified = {2019-08-25 15:51:29 -0500},
+	Doi = {10.1016/j.jco.2005.11.001},
+	Journal = {J. Complexity},
+	Keywords = {Counting complexity, Real complexity classes, Geometric degree, Euler characteristic, Betti numbers},
+	Number = {2},
+	Pages = {147--191},
+	Title = {Counting complexity classes for numeric computations II: Algebraic and semialgebraic sets},
+	Volume = {22},
+	Year = {2006},
+	Bdsk-Url-1 = {https://doi.org/10.1016/j.jco.2005.11.001}}
+
+@book{bcss-crc-98,
+	Author = {Blum, Lenore and Cucker, Felipe and Shub, Michael and Smale, Steve},
+	Date-Added = {2019-08-25 15:45:33 -0500},
+	Date-Modified = {2019-08-25 15:48:03 -0500},
+	Doi = {10.1007/978-1-4612-0701-6},
+	Publisher = {Springer},
+	Title = {Complexity and Real Computation},
+	Year = {1998},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-1-4612-0701-6}}
+
+@article{bss-tccor-89,
+	Author = {Blum, Lenore and Shub, Michael and Smale, Stephen},
+	Date-Added = {2019-08-25 15:31:31 -0500},
+	Date-Modified = {2019-08-25 15:45:29 -0500},
+	Doi = {10.1090/S0273-0979-1989-15750-9},
+	Journal = {Bull. Amer. Math. Soc.},
+	Pages = {1--46},
+	Title = {On a theory of computation and complexity over the real numbers: {$NP$}-completeness, recursive functions and universal machines},
+	Volume = {21},
+	Year = {1989},
+	Bdsk-Url-1 = {https://doi.org/10.1090/S0273-0979-1989-15750-9}}
+
+@inproceedings{hsz-scptc-13,
+	Arxiv = {1309.1270},
+	Author = {Herrmann, Christian and Sokoli, Johanna and Ziegler, Martin},
+	Booktitle = {Proc. 6th Conf. Mach. Comput. Universality},
+	Date-Added = {2019-08-24 16:20:53 -0500},
+	Date-Modified = {2019-08-24 16:27:12 -0500},
+	Doi = {10.4204/EPTCS.128.16},
+	Number = {128},
+	Pages = {85--92},
+	Series = {Electron. Proc. Theoret. Comput. Sci.},
+	Title = {Satisfiability of cross product terms is complete for real nondeterministic polytime {Blum}-{Shub}-{Smale} machines},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.4204/EPTCS.128.16}}
+
+@inproceedings{bm-edpas-17,
+	Author = {Bilò, Vittorio and Mavronicolas, Marios},
+	Booktitle = {Proc. 34rd Symp. Theor. Aspects Comput. Sci.},
+	Date-Added = {2019-08-24 16:06:45 -0500},
+	Date-Modified = {2019-08-24 16:13:27 -0500},
+	Doi = {10.4230/LIPIcs.STACS.2017.13},
+	Number = {66},
+	Pages = {13:1--13:14},
+	Publisher = {Schloss Dagstuhl--Leibniz-Zentrum für Informatik},
+	Series = {Leibniz Int. Proc. Informatics},
+	Title = {{$\exists\mathbb{R}$}-Complete Decision Problems About Symmetric {Nash} Equilibria in Symmetric Multi-Player Games},
+	Year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.4230/LIPIcs.STACS.2016.17}}
+
+@inproceedings{bm-cedpa-16,
+	Author = {Bilò, Vittorio and Mavronicolas, Marios},
+	Booktitle = {Proc. 33rd Symp. Theor. Aspects Comput. Sci.},
+	Date-Added = {2019-08-24 16:01:11 -0500},
+	Date-Modified = {2019-08-24 16:13:35 -0500},
+	Doi = {10.4230/LIPIcs.STACS.2016.17},
+	Number = {47},
+	Pages = {17:1--17:13},
+	Publisher = {Schloss Dagstuhl--Leibniz-Zentrum für Informatik},
+	Series = {Leibniz Int. Proc. Informatics},
+	Title = {A Catalog of {$\exists\mathbb{R}$}-Complete Decision Problems About {Nash} Equilibria in Multi-Player Games},
+	Year = {2016},
+	Bdsk-Url-1 = {https://doi.org/10.4230/LIPIcs.STACS.2016.17}}
+
+@article{gmvy-edvms-18,
+	Author = {Garg, Jugal and Mehta, Ruta and Vazirani, Vijay V. and Yazdanbod, Sadra},
+	Date-Added = {2019-08-24 15:54:13 -0500},
+	Date-Modified = {2019-08-24 15:58:16 -0500},
+	Doi = {10.1145/3175494},
+	Journal = {ACM Trans. Econ. Comput.},
+	Number = {1},
+	Pages = {1:1--1:23},
+	Title = {{$\exists \mathbb{R}$}-completness for decision version of multi-player (symmetric) {Nash} equilibria},
+	Volume = {6},
+	Year = {2018},
+	Bdsk-Url-1 = {https://doi.org/10.1145/3175494}}
 
 @article{desw-dpgws-07,
 	Arxiv = {math.CO/0606450},
@@ -20,7 +177,8 @@
 	Pages = {194--212},
 	Title = {Drawings of Planar Graphs with Few Slopes and Segments},
 	Volume = {38},
-	Year = {2007}}
+	Year = {2007},
+	Bdsk-Url-1 = {https://doi.org/10.1016/j.comgeo.2006.09.002}}
 
 @article{s-msgvs-89,
 	Author = {Sturmfels, Bernd},
@@ -1476,10 +1634,11 @@
 	Author = {Borradaile, Glencora and Eppstein, David and Nayyeri, Amir and Wulff-Nilsen, Christian},
 	Booktitle = {Proc. 32nd Int. Symp. Comput. Geom.},
 	Date-Added = {2018-10-31 12:43:46 -0500},
-	Date-Modified = {2018-10-31 12:54:32 -0500},
+	Date-Modified = {2019-08-24 16:13:42 -0500},
 	Doi = {10.4230/LIPIcs.SoCG.2016.22},
 	Pages = {22:1--22:16},
-	Series = {Leibniz International Proceedings in Informatics},
+	Publisher = {Schloss Dagstuhl--Leibniz-Zentrum für Informatik},
+	Series = {Leibniz Int. Proc. Informatics},
 	Title = {All-Pairs Minimum Cuts in Near-Linear Time for Surface-Embedded Graphs},
 	Volume = {51},
 	Year = {2016},
@@ -1865,10 +2024,11 @@
 	Author = {Despré, Vincent and Lazarus, Francis},
 	Booktitle = {Proc. 33rd Int. Symp. Comput. Geom.},
 	Date-Added = {2017-11-01 14:47:28 +0000},
-	Date-Modified = {2017-11-01 14:51:01 +0000},
+	Date-Modified = {2019-08-24 16:13:58 -0500},
 	Doi = {10.4230/LIPIcs.SoCG.2017.35},
 	Number = {77},
 	Pages = {35:1--35:15},
+	Publisher = {Schloss Dagstuhl--Leibniz-Zentrum für Informatik},
 	Series = {Leibniz Int. Proc. Informatics},
 	Title = {Computing the Geometric Intersection Number of Curves},
 	Year = {2017},
@@ -2425,11 +2585,12 @@
 	Author = {Allen, Sarah R. and Barba, Luis and Iacono, John and Langerman, Stefan},
 	Booktitle = {Proc. 32nd Int. Symp. Comput. Geom.},
 	Date-Added = {2016-07-13 19:00:22 +0000},
-	Date-Modified = {2018-10-31 12:45:20 -0500},
+	Date-Modified = {2019-08-24 16:13:52 -0500},
 	Doi = {10.4230/LIPIcs.SoCG.2016.15},
 	Pages = {15:1--15:16},
+	Publisher = {Schloss Dagstuhl--Leibniz-Zentrum für Informatik},
 	Read = {1},
-	Series = {Leibniz International Proceedings in Informatics},
+	Series = {Leibniz Int. Proc. Informatics},
 	Title = {Incremental {Voronoi} diagrams},
 	Volume = {51},
 	Year = {2016},
@@ -5169,8 +5330,8 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 @article{nt-aafts-96,
 	Author = {Nakahara, Hiroyuki and Takahashi, Hiromitsu},
 	Date-Added = {2015-06-26 07:43:34 +0000},
-	Date-Modified = {2015-07-06 22:37:56 +0000},
-	Journal = {IEICE TRANSACTIONS on Fundamentals of Electronics, Communications and Computer Sciences},
+	Date-Modified = {2019-08-24 16:27:34 -0500},
+	Journal = {IEICE Trans. Fundamentals of Electronics, Communications and Computer Sciences},
 	Note = {Special Section on Multi-dimensional Mobile Information Network},
 	Number = {7},
 	Pages = {1079--1088},
@@ -15434,16 +15595,16 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Author = {Borradaile, Glencora and Demaine, Erik D. and Tazari, Siamak},
 	Booktitle = {Proc. 26th Int. Symp. Theoretical Aspects Comput. Sci.},
 	Date-Added = {2010-07-07 11:59:30 -0500},
-	Date-Modified = {2011-12-22 21:21:50 +0000},
+	Date-Modified = {2019-08-24 16:12:40 -0500},
+	Doi = {10.4230/LIPIcs.STACS.2009.1835},
 	Pages = {171--182},
 	Publisher = {Schloss Dagstuhl--Leibniz-Zentrum für Informatik},
 	Read = {1},
 	Series = {Leibniz Int. Proc. Informatics},
 	Title = {Polynomial-Time Approximation Schemes for Subset-Connectivity Problems in Bounded-Genus Graphs},
-	Url = {http://drops.dagstuhl.de/opus/volltexte/2009/1835},
 	Volume = {3},
 	Year = {2009},
-	Bdsk-Url-1 = {http://drops.dagstuhl.de/opus/volltexte/2009/1835}}
+	Bdsk-Url-1 = {https://doi.org/10.4230/LIPIcs.STACS.2009.1835}}
 
 @inproceedings{c-scgsp-10,
 	Author = {{Colin de Verdière}, Éric},
