--- a/algorithms.bib
+++ b/algorithms.bib
@@ -2,12 +2,26 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2019-08-14 20:26:56 -0500 
+%% Created for Jeff Erickson at 2019-11-05 17:08:10 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{fw-tams-94,
+	Author = {Fredman, Michael L. and Willard, Dan E.},
+	Date-Added = {2019-11-05 17:05:07 -0600},
+	Date-Modified = {2019-11-05 17:08:07 -0600},
+	Doi = {10.1016/S0022-0000(05)80064-9},
+	Journal = {J. Comput. Syst. Sci.},
+	Number = {3},
+	Pages = {533--551},
+	Read = {1},
+	Title = {Trans-dichotomous algorithms for minimum spanning trees and shortest paths},
+	Volume = {48},
+	Year = {1994},
+	Bdsk-Url-1 = {https://doi.org/10.1016/S0022-0000(05)80064-9}}
 
 @incollection{e-mms-90,
 	Author = {van Emde~Boas, Peter},
@@ -20,20 +34,23 @@
 	Series = {Handbook of Theoretical Computer Science},
 	Title = {Machine Models and Simulations},
 	Volume = {1},
-	Year = {1990}}
+	Year = {1990},
+	Bdsk-Url-1 = {https://doi.org/10.1016/B978-0-444-88071-0.50006-0}}
 
 @article{cr-tbram-73,
 	Author = {Cook, Stephen A. and Reckhow, Robert A.},
 	Comments = {Defines the theoretical RAM model, ALGOL-RAM},
 	Date-Added = {2019-08-14 20:20:27 -0500},
-	Date-Modified = {2019-08-14 20:24:45 -0500},
+	Date-Modified = {2019-11-05 16:48:57 -0600},
 	Doi = {10.1016/S0022-0000(73)80029-7},
 	Journal = {J. Comput. Syst. Sci.},
 	Number = {4},
 	Pages = {354--375},
+	Read = {1},
 	Title = {Time Bounded Random Access Machines},
 	Volume = {7},
-	Year = {1973}}
+	Year = {1973},
+	Bdsk-Url-1 = {https://doi.org/10.1016/S0022-0000(73)80029-7}}
 
 @inproceedings{w-dnstm-83,
 	Author = {Wiedermann, Juraj},
@@ -55,7 +72,8 @@
 	Read = {1},
 	Title = {Fast Simulation of Turing Machines by Random Access Machines},
 	Volume = {17},
-	Year = {1988}}
+	Year = {1988},
+	Bdsk-Url-1 = {https://doi.org/10.1137/0217005}}
 
 @article{r-rrcs-91,
 	Author = {Robson, John M.},
